--- a/indexalura.html
+++ b/indexalura.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Reto Alura</title>
+    <link rel="shortcut icon" href="./img/Logo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="style1.css">
 </head>
@@ -31,7 +32,7 @@
                 </div>
         </section>
         <section class="panel_lateral">
-            <textarea class="mensaje" cols="18" rows="8" id="mensaje_area">
+            <textarea class="mensaje" cols="18" rows="8">
             </textarea>
             <img src="./img/Frame 5.png" alt="segundaimagen" id="img_text">
             <button class="copiar" onclick="btncopiar()">
