--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Reto Alura</title>
     <link rel="shortcut icon" href="./img/Logo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-    <link rel="stylesheet" href="style1.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
